[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackboard-ussu321"
version = "1.0.0"
description = "Professional Cybersecurity Intelligence Platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "issu321", email = "jaafreeusman@gmail.com"}
]
maintainers = [
    {name = "issu321", email = "jaafreeusman@gmail.com"}
]
keywords = [
    "cybersecurity",
    "ethical-hacking",
    "security",
    "osint",
    "threat-intelligence",
    "penetration-testing",
    "streamlit",
    "dashboard"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "psutil>=5.9.0",
    "python-whois>=0.8.0",
    "dnspython>=2.4.0",
    "networkx>=3.1",
    "requests>=2.31.0",
    "rich>=13.5.0",
    "scapy>=2.5.0",
    "certifi>=2023.7.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
hackboard = "hackboard.cli:main"

[project.urls]
Homepage = "https://github.com/issu321"
Documentation = "https://github.com/issu321/hackboard#readme"
Repository = "https://github.com/issu321/Hackboard"
Issues = "https://github.com/issu321/Hackboard/issues"

[tool.setuptools]
packages = ["hackboard"]
include-package-data = true

[tool.setuptools.package-data]
hackboard = ["assets/*"]

[tool.setuptools.exclude-package-data]
hackboard = ["tests/*", "docs/*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=hackboard --cov-report=term-missing"
