[metadata]
name = hackboard
version = 1.0.0
author = issu321
author_email = dev@hackboard.dev
description = Professional Cybersecurity Intelligence Platform
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
url = https://github.com/issu321/hackboard
project_urls =
    Bug Tracker = https://github.com/issu321/hackboard/issues
    Source = https://github.com/issu321/hackboard
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security

[options]
packages = find:
python_requires = >=3.9
install_requires =
    streamlit>=1.28.0
    plotly>=5.17.0
    pandas>=2.0.0
    numpy>=1.24.0
    psutil>=5.9.0
    python-whois>=0.8.0
    dnspython>=2.4.0
    networkx>=3.1
    requests>=2.31.0
    rich>=13.5.0
    scapy>=2.5.0
    certifi>=2023.7.22

[options.packages.find]
where = .
exclude =
    tests*
    docs*

[options.entry_points]
console_scripts =
    hackboard = hackboard.cli:main

[options.package_data]
hackboard = assets/*
